[package]
name = "nq"
version = "0.0.1"
edition = "2021"

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
futures-util = "0.3.28"
futures = "0.3.28"
pretty_env_logger = "0.5.0"
log = "0.4.20"
